@@ -1,3 +1,9 @@
+2009-03-09  Gary Thomas  <gary@mlbassoc.com>
+
+	* src/io.c: Better handling of history - commands now have
+	a [fixed] virtual number over time.  This makes !nn work correctly.
+	Fixes BZ#1000714
+
 2009-03-04  Gary Thomas  <gary@mlbassoc.com>
 
 	* src/fconfig.c (get_config): Simplify memcpy() call to
